# LibreraReader

./: .gitignore  LICENSE.txt  README.md  architecture.md  build.gradle  build.gradle.kts  build.xml  gradle.properties  remove_all.sh  settings.gradle  settings.gradle.kts  update_all.sh  update_fix_build.sh
Builder/: .ant-targets-build.xml  .classpath  .gitignore  .project  .project.save  CMakeLists.txt  _link_to_mupdf_1.21.1.sh  _link_to_mupdf_1.22.0.sh  _link_to_mupdf_1.22.1.sh  _link_to_mupdf_1.22.2.sh  _link_to_mupdf_1.23.0.sh  _link_to_mupdf_1.23.3.sh  adb-fake-call.sh  adb-restart.sh  all-alpha.sh  all-beta.sh  all-book-reader.sh  all-classic-no-install.sh  all-classic.sh  all-ebooka.sh  all-ebookareader.sh  all-fdroid.sh  all-first-release.sh  all-ink.sh  all-lirbi-free.sh  all-no-install-classic.sh  all-no-install.sh  all-one.sh  all-others.sh  all-pdf-2.0.sh  all-pro.sh  all-release.sh  all-sleep.sh  all-small-release.sh  all-test.sh  ant.properties  ant.properties.template  append2.sh  append3.sh  build (copy).xml  (+104 more)
Builder/Description/: about.txt  about2.txt  droid.txt  oldchangelog.txt  recent.txt  text.txt
Builder/Description/about/: ar.txt  de.txt  en.txt  es.txt  fr.txt  it.txt  ja.txt  nl.txt  pt.txt  ru.txt  sk.txt  tr.txt  uk.txt  zh.txt
Builder/Description/recent/: ar.txt  de.txt  en.txt  es.txt  fr.txt  it.txt  ja.txt  nl.txt  pt.txt  ru.txt  sk.txt  tr.txt  uk.txt  zh.txt
Builder/Description/text/: ar.txt  de.txt  en.txt  es.txt  fr.txt  it.txt  ja.txt  nl.txt  pt.txt  ru.txt  sk.txt  tr.txt  uk.txt  zh.txt
Builder/TestBook/: all_tags1.html  all_tags2.html  demo1.html  librera_test_book.html  no_p.html  test_font_familiy.html
Builder/TestBook/fonts/: fonts.html
Builder/TestBook/images/: image.tiff
Builder/TestBook/layout/: test_2_body.html
Builder/TestBook/mathml/: index.html
Builder/chrome-extension/: background.js
Builder/fdroid/: ant.properties  debug.keystore  fdroid.sh
Builder/init/: 51-android.rules  CMakeLists.txt  emulator  init.sh  org.gnome.AndroidStudio.desktop  org.gnome.Terminal.desktop  profile  unzip_epub
Builder/jni/: Android-1.11.mk  Android-1.16.1.mk  Android-1.17.0.mk  Android-1.18.0.mk  Android-1.19.0.mk  Android-1.20.0-rc2.mk  Android-1.20.0.mk  Android-1.20.2.mk  Android-1.21.1.mk  Android-1.22.0.mk  Android-1.22.1.mk  Android-1.22.2.mk  Android-1.23.0.mk  Android-1.23.3.mk  Android-1.23.5.mk  Android-1.23.7.mk  Android-1.24.0-rc1.mk  Android-1.24.1.mk  Android-1.24.6.mk  Android-master.mk  Android.mk  Application-16.mk  Application-19.mk  Application.mk  DjvuDroidBridge.cpp  MuPDF-1.11.mk  MuPDF-1.17.0.mk  MuPDF-1.19.0.mk  MuPDF-1.20.2.mk  MuPDF-1.21.1.mk  MuPDF-1.22.0.mk  MuPDF-1.23.7.mk  MuPDF-1.24.6.mk  MuPDF-master.mk  MupdfPatch.txt  androidfonts.c  androidfonts.h  ebookdroidjni.c  every.txt  javahelpers.h  (+15 more)
Builder/jni-1.11/: Android.mk  Application.mk  DjvuDroidBridge.cpp  MuPdf.mk  cbdroidbridge.c  every.txt  javahelpers.h  mupdfdroidbridge1.c
Builder/jni-1.11/antiword/: Android.mk  Makefile.IRIX  Makefile.cygming  Makefile.plan9  drawfile.c  imgexam.c  listlist.c  main_u.c  pdf.c  prop8.c  stylelist.c  tabstop.c  wordconst.h  wordole.c  xml.c
Builder/jni-1.11/djvu/: Android.mk  NEWS
Builder/jni-1.11/hqx/: hqxcommon.h
Builder/jni-1.11/mobi/: Android.mk  Makefile.in  buffer.h  compression.h  memory.h  mobitool.c  parse_rawml.c  parse_rawml.h  read.c  sha1.c  util.c  xmlwriter.c
Builder/jni-1.11/simd/: Android.mk  jcsample.h  jsimd_arm.c  jsimd_arm_neon.S
Builder/jni-1.11/~mupdf/: css-apply.c  epub-doc.c  every.txt  html-layout.c  mucbz.c  stext-device.c  structured-text.h  xml.c
Builder/jni-1.12/: Android.mk  AndroidLame.c  AndroidLame.h  AndroidLame.mk  Application.mk  CREATE-COMMON-FOR-ALL-THIRDPATY.txt  DjvuDroidBridge.cpp  MuPdf.mk  every.txt  mupdf_native.c  mupdf_native.h  mupdfdroidbridge1.c
Builder/jni-1.12/hqx/: hq2x.c
Builder/jni-1.12/libmp3lame/: VbrTag.c  lame.h  set_get.h  util.h
Builder/jni-1.12/mobi/: index.c  meta.c  miniz.c  mobi.h  opf.c  util.h
Builder/jni-1.12/simd/: Android.mk
Builder/jni-1.12/~mupdf/: colorspace.c  css-apply.c  epub-doc.c  html-layout.c  stext-output.c  xml.c
Builder/jni-1.16.1/: Android.mk  Application.mk  MuPdf.mk  mupdfdroidbridge1.c
Builder/jni-1.16.1/antiword/: Makefile.Linux  Makefile.Linux.Debug  Makefile.dj  Makefile.vc60  chartrans.c  datalist.c  imgexam.c  mkfile  postscript.c  prop6.c  saveas.c  unix.c
Builder/jni-1.16.1/hqx/: hq2x.c  hq3x.c  hq4x.c  hqxcommon.h
Builder/jni-1.16.1/java/: mupdf_native.c
Builder/jni-1.16.1/jpeg-turbo/: Android.mk
Builder/jni-1.16.1/mobi/: Makefile.am  debug.c  index.c  memory.c  miniz.h  mobitool.c  read.c  structure.h
Builder/jni-1.16.1/simd/: Android.mk
Builder/jni-1.16.1/~mupdf/: css-apply.c  epub-doc.c  every.txt  html-doc.c  html-layout.c  html-parse.c  mucbz.c  svg-doc.c
Builder/jni-1.16.1/~mupdf-old/: stext-output.c  xml.c
Builder/jni-1.3/: html-layout.c
Builder/jni-master/: Application.mk  DjvuDroidTrace.h  MuPdf.mk  ebookdroid.h  mupdfdroidbridge1.c
Builder/jni-master/antiword/: Makefile.RiscOS  Makefile.Solaris.gcc  Makefile.VMS  Makefile.dos  blocklist.c  doclist.c  fail.h  fmt_text.c  fontlist.c  fonts_u.c  imgtrans.c  jpeg2eps.c  options.c  output.c  png2sprt.c  prop0.c  rowlist.c  sectlist.c  startup.c  stylesheet.c  worddos.c
Builder/jni-master/djvu/: Android.mk
Builder/jni-master/hqx/: Android.mk
Builder/jni-master/java/: Makefile  mupdf_native.h
Builder/jni-master/mobi/: Makefile  common.c  encryption.c  miniz.c  mobimeta.c  opf.c  parse_rawml.h  read.h  xmlwriter.c
Builder/jni-master/~mupdf/: html-parse.c
Builder/jni-old/: Android.mk  MupdfPatch.txt
Builder/jni-old/djvu/: Android.mk  (+8 more)
Builder/latex/: foobnix_pdf_reader_tutorial.tex
Builder/librara-chrome-extension/: background.js  manifest.json
Builder/libre/: .project  AndroidManifest.xml.txt  DemoActivity.java.txt  IDataOfficeService.aidl  LibreService.java  LibreSimpleApi.java
Builder/test-book.epub/: librera_test_book.html  test_font_familiy.html
Builder/whatsnew/: all.txt  recent.txt
(+5544 files in other folders)
