cmake_minimum_required(VERSION 3.22.1)

set(CMAKE_VERBOSE_MAKEFILE OFF)

set(CMAKE_CXX_STANDARD 11)

set(MUPDF_ROOT "mupdf-1.23.7")
set(JAVA_HOME "/Library/Java/JavaVirtualMachines/jdk-21.jdk/Contents/Home")

project("mupdf")

set(CORE_SRC
        "${MUPDF_ROOT}/source/fitz/archive.c"
        "${MUPDF_ROOT}/source/fitz/bbox-device.c"
        "${MUPDF_ROOT}/source/fitz/bidi-std.c"
        "${MUPDF_ROOT}/source/fitz/bidi.c"
        "${MUPDF_ROOT}/source/fitz/bitmap.c"
        "${MUPDF_ROOT}/source/fitz/buffer.c"
        "${MUPDF_ROOT}/source/fitz/color-fast.c"
        "${MUPDF_ROOT}/source/fitz/color-icc-create.c"
        "${MUPDF_ROOT}/source/fitz/color-lcms.c"
        "${MUPDF_ROOT}/source/fitz/colorspace.c"
        "${MUPDF_ROOT}/source/fitz/compress.c"
        "${MUPDF_ROOT}/source/fitz/compressed-buffer.c"
        "${MUPDF_ROOT}/source/fitz/context.c"
        "${MUPDF_ROOT}/source/fitz/crypt-aes.c"
        "${MUPDF_ROOT}/source/fitz/crypt-arc4.c"
        "${MUPDF_ROOT}/source/fitz/crypt-md5.c"
        "${MUPDF_ROOT}/source/fitz/crypt-sha2.c"
        "${MUPDF_ROOT}/source/fitz/device.c"
        "${MUPDF_ROOT}/source/fitz/directory.c"
        "${MUPDF_ROOT}/source/fitz/document-all.c"
        "${MUPDF_ROOT}/source/fitz/document.c"
        "${MUPDF_ROOT}/source/fitz/draw-affine.c"
        "${MUPDF_ROOT}/source/fitz/draw-blend.c"
        "${MUPDF_ROOT}/source/fitz/draw-device.c"
        "${MUPDF_ROOT}/source/fitz/draw-edge.c"
        "${MUPDF_ROOT}/source/fitz/draw-edgebuffer.c"
        "${MUPDF_ROOT}/source/fitz/draw-glyph.c"
        "${MUPDF_ROOT}/source/fitz/draw-mesh.c"
        "${MUPDF_ROOT}/source/fitz/draw-paint.c"
        "${MUPDF_ROOT}/source/fitz/draw-path.c"
        "${MUPDF_ROOT}/source/fitz/draw-rasterize.c"
        "${MUPDF_ROOT}/source/fitz/draw-scale-simple.c"
        "${MUPDF_ROOT}/source/fitz/draw-unpack.c"
        "${MUPDF_ROOT}/source/fitz/encode-basic.c"
        "${MUPDF_ROOT}/source/fitz/encode-fax.c"
        "${MUPDF_ROOT}/source/fitz/encodings.c"
        "${MUPDF_ROOT}/source/fitz/error.c"
        "${MUPDF_ROOT}/source/fitz/filter-basic.c"
        "${MUPDF_ROOT}/source/fitz/filter-dct.c"
        "${MUPDF_ROOT}/source/fitz/filter-fax.c"
        "${MUPDF_ROOT}/source/fitz/filter-flate.c"
        "${MUPDF_ROOT}/source/fitz/filter-jbig2.c"
        "${MUPDF_ROOT}/source/fitz/filter-leech.c"
        "${MUPDF_ROOT}/source/fitz/filter-lzw.c"
        "${MUPDF_ROOT}/source/fitz/filter-predict.c"
        "${MUPDF_ROOT}/source/fitz/filter-sgi.c"
        "${MUPDF_ROOT}/source/fitz/filter-thunder.c"
        "${MUPDF_ROOT}/source/fitz/font.c"
        "${MUPDF_ROOT}/source/fitz/ftoa.c"
        "${MUPDF_ROOT}/source/fitz/geometry.c"
        "${MUPDF_ROOT}/source/fitz/getopt.c"
        "${MUPDF_ROOT}/source/fitz/glyph.c"
        "${MUPDF_ROOT}/source/fitz/glyphbox.c"
        "${MUPDF_ROOT}/source/fitz/halftone.c"
        "${MUPDF_ROOT}/source/fitz/harfbuzz.c"
        "${MUPDF_ROOT}/source/fitz/hash.c"
        "${MUPDF_ROOT}/source/fitz/image.c"
        "${MUPDF_ROOT}/source/fitz/jmemcust.c"
        "${MUPDF_ROOT}/source/fitz/link.c"
        "${MUPDF_ROOT}/source/fitz/list-device.c"
        "${MUPDF_ROOT}/source/fitz/load-bmp.c"
        "${MUPDF_ROOT}/source/fitz/load-gif.c"
        "${MUPDF_ROOT}/source/fitz/load-jbig2.c"
        "${MUPDF_ROOT}/source/fitz/load-jpeg.c"
        "${MUPDF_ROOT}/source/fitz/load-jpx.c"
        "${MUPDF_ROOT}/source/fitz/load-jxr.c"
        "${MUPDF_ROOT}/source/fitz/load-png.c"
        "${MUPDF_ROOT}/source/fitz/load-pnm.c"
        "${MUPDF_ROOT}/source/fitz/load-psd.c"
        "${MUPDF_ROOT}/source/fitz/load-tiff.c"
        "${MUPDF_ROOT}/source/fitz/log.c"
        "${MUPDF_ROOT}/source/fitz/memento.c"
        "${MUPDF_ROOT}/source/fitz/memory.c"
        "${MUPDF_ROOT}/source/fitz/noto.c"
        "${MUPDF_ROOT}/source/fitz/ocr-device.c"
        "${MUPDF_ROOT}/source/fitz/outline.c"
        "${MUPDF_ROOT}/source/fitz/output-cbz.c"
        "${MUPDF_ROOT}/source/fitz/output-docx.c"
        "${MUPDF_ROOT}/source/fitz/output-jpeg.c"
        "${MUPDF_ROOT}/source/fitz/output-pcl.c"
        "${MUPDF_ROOT}/source/fitz/output-pclm.c"
        "${MUPDF_ROOT}/source/fitz/output-pdfocr.c"
        "${MUPDF_ROOT}/source/fitz/output-png.c"
        "${MUPDF_ROOT}/source/fitz/output-pnm.c"
        "${MUPDF_ROOT}/source/fitz/output-ps.c"
        "${MUPDF_ROOT}/source/fitz/output-psd.c"
        "${MUPDF_ROOT}/source/fitz/output-pwg.c"
        "${MUPDF_ROOT}/source/fitz/output-svg.c"
        "${MUPDF_ROOT}/source/fitz/output.c"
        "${MUPDF_ROOT}/source/fitz/path.c"
        "${MUPDF_ROOT}/source/fitz/pixmap.c"
        "${MUPDF_ROOT}/source/fitz/pool.c"
        "${MUPDF_ROOT}/source/fitz/printf.c"
        "${MUPDF_ROOT}/source/fitz/random.c"
        "${MUPDF_ROOT}/source/fitz/separation.c"
        "${MUPDF_ROOT}/source/fitz/shade.c"
        "${MUPDF_ROOT}/source/fitz/stext-device.c"
        "${MUPDF_ROOT}/source/fitz/stext-output.c"
        "${MUPDF_ROOT}/source/fitz/stext-search.c"
        "${MUPDF_ROOT}/source/fitz/store.c"
        "${MUPDF_ROOT}/source/fitz/stream-open.c"
        "${MUPDF_ROOT}/source/fitz/stream-read.c"
        "${MUPDF_ROOT}/source/fitz/string.c"
        "${MUPDF_ROOT}/source/fitz/strtof.c"
        "${MUPDF_ROOT}/source/fitz/svg-device.c"
        "${MUPDF_ROOT}/source/fitz/test-device.c"
        "${MUPDF_ROOT}/source/fitz/text.c"
        "${MUPDF_ROOT}/source/fitz/time.c"
        "${MUPDF_ROOT}/source/fitz/trace-device.c"
        "${MUPDF_ROOT}/source/fitz/track-usage.c"
        "${MUPDF_ROOT}/source/fitz/transition.c"
        "${MUPDF_ROOT}/source/fitz/tree.c"
        "${MUPDF_ROOT}/source/fitz/ucdn.c"
        "${MUPDF_ROOT}/source/fitz/untar.c"
        "${MUPDF_ROOT}/source/fitz/unzip.c"
        "${MUPDF_ROOT}/source/fitz/util.c"
        "${MUPDF_ROOT}/source/fitz/warp.c"
        "${MUPDF_ROOT}/source/fitz/writer.c"
        "${MUPDF_ROOT}/source/fitz/xml.c"
        "${MUPDF_ROOT}/source/fitz/xmltext-device.c"
        "${MUPDF_ROOT}/source/fitz/zip.c"
        "${MUPDF_ROOT}/source/fitz/tessocr.cpp"
        "${MUPDF_ROOT}/source/pdf/pdf-annot.c"
        "${MUPDF_ROOT}/source/pdf/pdf-appearance.c"
        "${MUPDF_ROOT}/source/pdf/pdf-clean-file.c"
        "${MUPDF_ROOT}/source/pdf/pdf-clean.c"
        "${MUPDF_ROOT}/source/pdf/pdf-cmap-load.c"
        "${MUPDF_ROOT}/source/pdf/pdf-cmap-parse.c"
        "${MUPDF_ROOT}/source/pdf/pdf-cmap.c"
        "${MUPDF_ROOT}/source/pdf/pdf-colorspace.c"
        "${MUPDF_ROOT}/source/pdf/pdf-crypt.c"
        "${MUPDF_ROOT}/source/pdf/pdf-device.c"
        "${MUPDF_ROOT}/source/pdf/pdf-event.c"
        "${MUPDF_ROOT}/source/pdf/pdf-font-add.c"
        "${MUPDF_ROOT}/source/pdf/pdf-font.c"
        "${MUPDF_ROOT}/source/pdf/pdf-form.c"
        "${MUPDF_ROOT}/source/pdf/pdf-function.c"
        "${MUPDF_ROOT}/source/pdf/pdf-graft.c"
        "${MUPDF_ROOT}/source/pdf/pdf-image.c"
        "${MUPDF_ROOT}/source/pdf/pdf-interpret.c"
        "${MUPDF_ROOT}/source/pdf/pdf-js.c"
        "${MUPDF_ROOT}/source/pdf/pdf-layer.c"
        "${MUPDF_ROOT}/source/pdf/pdf-layout.c"
        "${MUPDF_ROOT}/source/pdf/pdf-lex.c"
        "${MUPDF_ROOT}/source/pdf/pdf-link.c"
        "${MUPDF_ROOT}/source/pdf/pdf-metrics.c"
        "${MUPDF_ROOT}/source/pdf/pdf-nametree.c"
        "${MUPDF_ROOT}/source/pdf/pdf-object.c"
        "${MUPDF_ROOT}/source/pdf/pdf-op-buffer.c"
        "${MUPDF_ROOT}/source/pdf/pdf-op-color.c"
        "${MUPDF_ROOT}/source/pdf/pdf-op-filter.c"
        "${MUPDF_ROOT}/source/pdf/pdf-op-run.c"
        "${MUPDF_ROOT}/source/pdf/pdf-outline.c"
        "${MUPDF_ROOT}/source/pdf/pdf-page.c"
        "${MUPDF_ROOT}/source/pdf/pdf-parse.c"
        "${MUPDF_ROOT}/source/pdf/pdf-pattern.c"
        "${MUPDF_ROOT}/source/pdf/pdf-repair.c"
        "${MUPDF_ROOT}/source/pdf/pdf-resources.c"
        "${MUPDF_ROOT}/source/pdf/pdf-run.c"
        "${MUPDF_ROOT}/source/pdf/pdf-shade-recolor.c"
        "${MUPDF_ROOT}/source/pdf/pdf-shade.c"
        "${MUPDF_ROOT}/source/pdf/pdf-signature.c"
        "${MUPDF_ROOT}/source/pdf/pdf-store.c"
        "${MUPDF_ROOT}/source/pdf/pdf-stream.c"
        "${MUPDF_ROOT}/source/pdf/pdf-type3.c"
        "${MUPDF_ROOT}/source/pdf/pdf-unicode.c"
        "${MUPDF_ROOT}/source/pdf/pdf-util.c"
        "${MUPDF_ROOT}/source/pdf/pdf-write.c"
        "${MUPDF_ROOT}/source/pdf/pdf-xobject.c"
        "${MUPDF_ROOT}/source/pdf/pdf-xref.c"
        "${MUPDF_ROOT}/source/xps/xps-common.c"
        "${MUPDF_ROOT}/source/xps/xps-doc.c"
        "${MUPDF_ROOT}/source/xps/xps-glyphs.c"
        "${MUPDF_ROOT}/source/xps/xps-gradient.c"
        "${MUPDF_ROOT}/source/xps/xps-image.c"
        "${MUPDF_ROOT}/source/xps/xps-link.c"
        "${MUPDF_ROOT}/source/xps/xps-outline.c"
        "${MUPDF_ROOT}/source/xps/xps-path.c"
        "${MUPDF_ROOT}/source/xps/xps-resource.c"
        "${MUPDF_ROOT}/source/xps/xps-tile.c"
        "${MUPDF_ROOT}/source/xps/xps-util.c"
        "${MUPDF_ROOT}/source/xps/xps-zip.c"
        "${MUPDF_ROOT}/source/svg/svg-color.c"
        "${MUPDF_ROOT}/source/svg/svg-doc.c"
        "${MUPDF_ROOT}/source/svg/svg-parse.c"
        "${MUPDF_ROOT}/source/svg/svg-run.c"
        "${MUPDF_ROOT}/source/html/css-apply.c"
        "${MUPDF_ROOT}/source/html/css-parse.c"
        "${MUPDF_ROOT}/source/html/epub-doc.c"
        "${MUPDF_ROOT}/source/html/html-doc.c"
        "${MUPDF_ROOT}/source/html/html-font.c"
        "${MUPDF_ROOT}/source/html/html-layout.c"
        "${MUPDF_ROOT}/source/html/html-outline.c"
        "${MUPDF_ROOT}/source/html/html-parse.c"
        "${MUPDF_ROOT}/source/html/mobi.c"
        "${MUPDF_ROOT}/source/html/story-writer.c"
        "${MUPDF_ROOT}/source/html/xml-dom.c"
        "${MUPDF_ROOT}/source/reflow/reflow-doc.c"
        "${MUPDF_ROOT}/source/cbz/mucbz.c"
        "${MUPDF_ROOT}/source/cbz/muimg.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/Dingbats.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusBoxes-Regular.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusMonoPS-Bold.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusMonoPS-BoldItalic.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusMonoPS-Italic.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusMonoPS-Regular.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusRoman-Bold.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusRoman-BoldItalic.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusRoman-Italic.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusRoman-Regular.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusSans-Bold.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusSans-BoldItalic.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusSans-Italic.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/NimbusSans-Regular.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/urw/StandardSymbolsPS.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/han/SourceHanSerif-Regular.ttc.c"
        "${MUPDF_ROOT}/generated/resources/fonts/droid/DroidSansFallbackFull.ttf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/droid/DroidSansFallback.ttf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoMusic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoNaskhArabic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoNastaliqUrdu-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSans-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansAdlam-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansAnatolianHieroglyphs-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansAvestan-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansBamum-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansBassaVah-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansBatak-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansBhaiksuki-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansBrahmi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansBuginese-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansBuhid-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansCanadianAboriginal-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansCarian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansCaucasianAlbanian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansChakma-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansCham-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansCherokee-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansCoptic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansCuneiform-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansCypriot-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansDeseret-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansDuployan-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansEgyptianHieroglyphs-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansElbasan-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansElymaic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansGlagolitic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansGothic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansGunjalaGondi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansHanifiRohingya-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansHanunoo-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansHatran-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansImperialAramaic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansInscriptionalPahlavi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansInscriptionalParthian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansJavanese-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansKaithi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansKayahLi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansKharoshthi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansKhudawadi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansLepcha-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansLimbu-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansLinearA-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansLinearB-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansLisu-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansLycian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansLydian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMahajani-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMandaic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansManichaean-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMarchen-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMasaramGondi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMath-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMedefaidrin-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMeeteiMayek-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMendeKikakui-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMeroitic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMiao-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansModi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMongolian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMro-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansMultani-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansNKo-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansNabataean-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansNewTaiLue-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansNewa-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansNushu-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOgham-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOlChiki-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOldHungarian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOldItalic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOldNorthArabian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOldPermic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOldPersian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOldSogdian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOldSouthArabian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOldTurkic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOriya-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOsage-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansOsmanya-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansPahawhHmong-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansPalmyrene-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansPauCinHau-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansPhagsPa-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansPhoenician-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansPsalterPahlavi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansRejang-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansRunic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSamaritan-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSaurashtra-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSharada-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansShavian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSiddham-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSogdian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSoraSompeng-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSoyombo-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSundanese-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSylotiNagri-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSymbols-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSymbols2-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansSyriac-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansTagalog-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansTagbanwa-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansTaiLe-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansTaiTham-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansTaiViet-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansTakri-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansThaana-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansTifinagh-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansTirhuta-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansUgaritic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansVai-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansWancho-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansWarangCiti-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansYi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSansZanabazarSquare-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerif-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifAhom-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifArmenian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifBalinese-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifBengali-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifDevanagari-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifDogra-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifEthiopic-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifGeorgian-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifGrantha-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifGujarati-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifGurmukhi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifHebrew-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifKannada-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifKhmer-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifKhojki-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifLao-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifMalayalam-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifMyanmar-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifNyiakengPuachueHmong-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifSinhala-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifTamil-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifTangut-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifTelugu-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifThai-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifTibetan-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoSerifYezidi-Regular.otf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/noto/NotoEmoji-Regular.ttf.c"
        "${MUPDF_ROOT}/generated/resources/fonts/sil/CharisSIL-Bold.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/sil/CharisSIL-BoldItalic.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/sil/CharisSIL-Italic.cff.c"
        "${MUPDF_ROOT}/generated/resources/fonts/sil/CharisSIL.cff.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftbase.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftbbox.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftbitmap.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftdebug.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftfstype.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftgasp.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftglyph.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftinit.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftstroke.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftsynth.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/ftsystem.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/base/fttype1.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/cff/cff.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/cid/type1cid.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/psaux/psaux.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/pshinter/pshinter.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/psnames/psnames.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/raster/raster.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/sfnt/sfnt.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/smooth/smooth.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/truetype/truetype.c"
        "${MUPDF_ROOT}/thirdparty/freetype/src/type1/type1.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/attribute.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/char_ref.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/error.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/parser.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/string_buffer.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/string_piece.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/tag.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/tokenizer.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/utf8.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/util.c"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src/vector.c"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/graph/gsubgpos-context.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-aat-layout.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-aat-map.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-blob.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-buffer.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-buffer-verify.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-buffer-serialize.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-common.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-face.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-fallback-shape.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-font.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ft.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-map.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-number.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-cff1-table.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-cff2-table.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-color.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-face.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-font.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-layout.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-map.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-math.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-meta.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-metrics.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-name.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shape.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shape-fallback.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shape-normalize.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-arabic.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-default.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-hangul.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-hebrew.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-indic.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-indic-table.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-khmer.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-myanmar.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-syllabic.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-thai.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-use.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-shaper-vowel-constraints.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-tag.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ot-var.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-set.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-shape.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-shape-plan.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-shaper.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-static.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-subset.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-subset-cff1.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-subset-cff2.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-subset-cff-common.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-subset-input.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-subset-plan.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-ucd.cc"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src/hb-unicode.cc"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jaricom.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcapimin.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcapistd.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcarith.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jccoefct.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jccolor.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcdctmgr.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jchuff.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcinit.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcmainct.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcmarker.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcmaster.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcomapi.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcparam.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcprepct.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jcsample.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdapimin.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdapistd.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdarith.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdatadst.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdatasrc.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdcoefct.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdcolor.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jddctmgr.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdhuff.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdinput.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdmainct.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdmarker.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdmaster.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdmerge.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdpostct.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdsample.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jdtrans.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jerror.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jfdctflt.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jfdctfst.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jfdctint.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jidctflt.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jidctfst.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jidctint.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jmemmgr.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jquant1.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jquant2.c"
        "${MUPDF_ROOT}/thirdparty/libjpeg/jutils.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsalpha.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmscam02.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmscgats.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmscnvrt.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmserr.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsgamma.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsgmt.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmshalf.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsintrp.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsio0.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsio1.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmslut.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsmd5.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsmtrx.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsnamed.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsopt.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmspack.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmspcs.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsplugin.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsps2.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmssamp.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmssm.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmstypes.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsvirt.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmswtpnt.c"
        "${MUPDF_ROOT}/thirdparty/lcms2/src/cmsxform.c"
        "${MUPDF_ROOT}/thirdparty/mujs/one.c"
        "${MUPDF_ROOT}/thirdparty/zlib/adler32.c"
        "${MUPDF_ROOT}/thirdparty/zlib/compress.c"
        "${MUPDF_ROOT}/thirdparty/zlib/crc32.c"
        "${MUPDF_ROOT}/thirdparty/zlib/deflate.c"
        "${MUPDF_ROOT}/thirdparty/zlib/inffast.c"
        "${MUPDF_ROOT}/thirdparty/zlib/inflate.c"
        "${MUPDF_ROOT}/thirdparty/zlib/inftrees.c"
        "${MUPDF_ROOT}/thirdparty/zlib/trees.c"
        "${MUPDF_ROOT}/thirdparty/zlib/uncompr.c"
        "${MUPDF_ROOT}/thirdparty/zlib/zutil.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_arith.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_arith_iaid.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_arith_int.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_generic.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_halftone.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_huffman.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_hufftab.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_image.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_mmr.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_page.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_refinement.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_segment.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_symbol_dict.c"
        "${MUPDF_ROOT}/thirdparty/jbig2dec/jbig2_text.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/bio.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/cio.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/dwt.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/event.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/function_list.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/ht_dec.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/image.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/invert.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/j2k.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/jp2.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/mct.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/mqc.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/openjpeg.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/pi.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/sparse_array.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/t1.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/t2.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/tcd.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/tgt.c"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2/thread.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/alloc.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/astring.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/boxer.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/buffer.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/document.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/docx.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/docx_template.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/extract.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/join.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/json.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/mem.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/html.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/odt.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/odt_template.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/outf.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/rect.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/sys.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/text.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/xml.c"
        "${MUPDF_ROOT}/thirdparty/extract/src/zip.c"


        "${MUPDF_ROOT}/platform/java/mupdf_native.c"
)


add_library(mupdf SHARED ${CORE_SRC})



target_include_directories(mupdf PUBLIC
        "${MUPDF_ROOT}/thirdparty/freetype/include"
        "${MUPDF_ROOT}/scripts/freetype"
        "${MUPDF_ROOT}/thirdparty/gumbo-parser/src"
        "${MUPDF_ROOT}/thirdparty/harfbuzz/src"
        "${MUPDF_ROOT}/thirdparty/libjpeg"
        "${MUPDF_ROOT}/scripts/libjpeg"
        "${MUPDF_ROOT}/thirdparty/lcms2/include"
        "${MUPDF_ROOT}/thirdparty/mujs"
        "${MUPDF_ROOT}/thirdparty/zlib"
        "${MUPDF_ROOT}/thirdparty/jbig2dec"
        "${MUPDF_ROOT}/thirdparty/openjpeg/src/lib/openjp2"
        "${MUPDF_ROOT}/thirdparty/extract/include"
        "${MUPDF_ROOT}/thirdparty/extract/src"
        "${MUPDF_ROOT}/include/mupdf"
        "${MUPDF_ROOT}/include"
        "${MUPDF_ROOT}/platform/java"
        "${MUPDF_ROOT}/platform/java/jni"
        "${JAVA_HOME}/include"
        "${JAVA_HOME}/include/darwin"
        #  "/opt/homebrew/Cellar/openssl@3/3.2.1/include"
)
target_compile_definitions(mupdf PUBLIC
        "HAVE_LCMS2MT"
        "OPJ_STATIC"
        "OPJ_HAVE_INTTYPES_H"
        "OPJ_HAVE_STDINT_H"
        "MEMENTO_MUPDF_HACKS"
        "FT_CONFIG_MODULES_H=\"slimftmodules.h\""
        "FT_CONFIG_OPTIONS_H=\"slimftoptions.h\""
        "FT2_BUILD_LIBRARY"
        "HAVE_FALLBACK=1"
        "HAVE_FREETYPE"
        "HAVE_OT"
        "HAVE_ROUND"
        "HAVE_UCDN"
        "HB_NO_MT"
        "HB_NO_PRAGMA_GCC_DIAGNOSTIC"
        "hb_malloc_impl=fz_hb_malloc"
        "hb_calloc_impl=fz_hb_calloc"
        "hb_free_impl=fz_hb_free"
        "hb_realloc_impl=fz_hb_realloc"
        "HAVE_UNISTD_H"
        "HAVE_STDARG_H"
        "HAVE_STDINT_H"
        "JBIG_EXTERNAL_MEMENTO_H=\"mupdf/memento.h\""
        "MUTEX_pthread=0"
        "HAVE_LIBCRYPTO"
)



